raylib-sys/raylib.h

typedef enum
{
    false,
    true
} bool;
// Vector2 type
typedef struct Vector2
{
    float x;
    float y;
} Vector2;
// Vector3 type
typedef struct Vector3
{
    float x;
    float y;
    float z;
} Vector3;
// Color type, RGBA (32bit)
typedef struct Color
{
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
} Color;
// Rectangle type
typedef struct Rectangle
{
    float x;
    float y;
    float width;
    float height;
} Rectangle;
// Camera type, defines a camera position/orientation in 3d space
typedef struct Camera3D
{
    Vector3 position; // Camera position
    Vector3 target;   // Camera target it looks-at
    Vector3 up;       // Camera up vector (rotation over its axis)
    float fovy;       // Camera field-of-view apperture in Y (degrees) in perspective, used as near plane width in orthographic
    int type;         // Camera type, defines projection type: CAMERA_PERSPECTIVE or CAMERA_ORTHOGRAPHIC
} Camera3D;
    RLAPI const char *GetFileName(const char *filePath);               // Get pointer to filename for a path string
    RLAPI const char *GetFileNameWithoutExt(const char *filePath);     // Get filename string without extension (memory should be freed)
    RLAPI const char *GetDirectoryPath(const char *fileName);          // Get full path for a given fileName (uses static string)
    RLAPI const char *GetWorkingDirectory(void);                       // Get current working directory (uses static string)
    RLAPI char **GetDirectoryFiles(const char *dirPath, int *count);   // Get filenames in a directory path (memory should be freed)
    RLAPI void ClearDirectoryFiles(void);                              // Clear directory files paths buffers (free memory)
    RLAPI bool ChangeDirectory(const char *dir);                       // Change working directory, returns true if success
    RLAPI bool IsFileDropped(void);                                    // Check if a file has been dropped into window
    RLAPI char **GetDroppedFiles(int *count);                          // Get dropped files names (memory should be freed)
    RLAPI void ClearDroppedFiles(void);                                // Clear dropped files paths buffer (free memory)
    RLAPI long GetFileModTime(const char *fileName);                   // Get file modification time (last write time)
    // Persistent storage management
    RLAPI void StorageSaveValue(int position, int value); // Save integer value to storage file (to defined position)
    RLAPI int StorageLoadValue(int position);             // Load integer value from storage file (from defined position)
    RLAPI void OpenURL(const char *url); // Open URL with default system browser (if available)
    //------------------------------------------------------------------------------------
    // Input Handling Functions (Module: core)
    //------------------------------------------------------------------------------------

    // Input-related functions: keyboard
    RLAPI bool IsKeyPressed(int key);  // Detect if a key has been pressed once
    RLAPI bool IsKeyDown(int key);     // Detect if a key is being pressed
    RLAPI bool IsKeyReleased(int key); // Detect if a key has been released once
    RLAPI bool IsKeyUp(int key);       // Detect if a key is NOT being pressed
    RLAPI int GetKeyPressed(void);     // Get latest key pressed
    RLAPI void SetExitKey(int key);    // Set a custom key to exit program (default is ESC)
    // Input-related functions: gamepads
    RLAPI bool IsGamepadAvailable(int gamepad);                  // Detect if a gamepad is available
    RLAPI bool IsGamepadName(int gamepad, const char *name);     // Check gamepad name (if available)
    RLAPI const char *GetGamepadName(int gamepad);               // Return gamepad internal name id
    RLAPI bool IsGamepadButtonPressed(int gamepad, int button);  // Detect if a gamepad button has been pressed once
    RLAPI bool IsGamepadButtonDown(int gamepad, int button);     // Detect if a gamepad button is being pressed
    RLAPI bool IsGamepadButtonReleased(int gamepad, int button); // Detect if a gamepad button has been released once
    RLAPI bool IsGamepadButtonUp(int gamepad, int button);       // Detect if a gamepad button is NOT being pressed
    RLAPI int GetGamepadButtonPressed(void);                     // Get the last gamepad button pressed
    RLAPI int GetGamepadAxisCount(int gamepad);                  // Return gamepad axis count for a gamepad
    RLAPI float GetGamepadAxisMovement(int gamepad, int axis);   // Return axis movement value for a gamepad axis
    // Input-related functions: mouse
    RLAPI bool IsMouseButtonPressed(int button);          // Detect if a mouse button has been pressed once
    RLAPI bool IsMouseButtonDown(int button);             // Detect if a mouse button is being pressed
    RLAPI bool IsMouseButtonReleased(int button);         // Detect if a mouse button has been released once
    RLAPI bool IsMouseButtonUp(int button);               // Detect if a mouse button is NOT being pressed
    RLAPI int GetMouseX(void);                            // Returns mouse position X
    RLAPI int GetMouseY(void);                            // Returns mouse position Y
    RLAPI Vector2 GetMousePosition(void);                 // Returns mouse position XY
    RLAPI void SetMousePosition(int x, int y);            // Set mouse position XY
    RLAPI void SetMouseOffset(int offsetX, int offsetY);  // Set mouse offset
    RLAPI void SetMouseScale(float scaleX, float scaleY); // Set mouse scaling
    RLAPI int GetMouseWheelMove(void);                    // Returns mouse wheel movement Y
    // Input-related functions: touch
    RLAPI int GetTouchX(void);                 // Returns touch position X for touch point 0 (relative to screen size)
    RLAPI int GetTouchY(void);                 // Returns touch position Y for touch point 0 (relative to screen size)
    RLAPI Vector2 GetTouchPosition(int index); // Returns touch position XY for a touch point index (relative to screen size)
    //------------------------------------------------------------------------------------
    // Gestures and Touch Handling Functions (Module: gestures)
    //------------------------------------------------------------------------------------
    RLAPI void SetGesturesEnabled(unsigned int gestureFlags); // Enable a set of gestures using flags
    RLAPI bool IsGestureDetected(int gesture);                // Check if a gesture have been detected
    RLAPI int GetGestureDetected(void);                       // Get latest detected gesture
    RLAPI int GetTouchPointsCount(void);                      // Get touch points count
    RLAPI float GetGestureHoldDuration(void);                 // Get gesture hold time in milliseconds
    RLAPI Vector2 GetGestureDragVector(void);                 // Get gesture drag vector
    RLAPI float GetGestureDragAngle(void);                    // Get gesture drag angle
    RLAPI Vector2 GetGesturePinchVector(void);                // Get gesture pinch delta
    RLAPI float GetGesturePinchAngle(void);                   // Get gesture pinch angle
    //------------------------------------------------------------------------------------
    // Camera System Functions (Module: camera)
    //------------------------------------------------------------------------------------
    RLAPI void SetCameraMode(Camera camera, int mode); // Set camera mode (multiple camera modes available)
    RLAPI void UpdateCamera(Camera *camera);           // Update camera position for selected mode
    RLAPI void SetCameraPanControl(int panKey);                                                                     // Set camera pan key to combine with mouse movement (free camera)
    RLAPI void SetCameraAltControl(int altKey);                                                                     // Set camera alt key to combine with mouse movement (free camera)
    RLAPI void SetCameraSmoothZoomControl(int szKey);                                                               // Set camera smooth zoom key to combine with mouse (free camera)
    RLAPI void SetCameraMoveControls(int frontKey, int backKey, int rightKey, int leftKey, int upKey, int downKey); // Set camera move controls (1st person and 3rd person cameras)
    //------------------------------------------------------------------------------------
    // Basic Shapes Drawing Functions (Module: shapes)
    //------------------------------------------------------------------------------------

    // Basic shapes drawing functions
    RLAPI void DrawPixel(int posX, int posY, Color color);                                                    // Draw a pixel
    RLAPI void DrawPixelV(Vector2 position, Color color);                                                     // Draw a pixel (Vector version)
    RLAPI void DrawLine(int startPosX, int startPosY, int endPosX, int endPosY, Color color);                 // Draw a line
    RLAPI void DrawLineV(Vector2 startPos, Vector2 endPos, Color color);                                      // Draw a line (Vector version)
    RLAPI void DrawLineEx(Vector2 startPos, Vector2 endPos, float thick, Color color);                        // Draw a line defining thickness
    RLAPI void DrawLineBezier(Vector2 startPos, Vector2 endPos, float thick, Color color);                    // Draw a line using cubic-bezier curves in-out
    RLAPI void DrawCircle(int centerX, int centerY, float radius, Color color);                               // Draw a color-filled circle
    RLAPI void DrawCircleGradient(int centerX, int centerY, float radius, Color color1, Color color2);        // Draw a gradient-filled circle
    RLAPI void DrawCircleV(Vector2 center, float radius, Color color);                                        // Draw a color-filled circle (Vector version)
    RLAPI void DrawCircleLines(int centerX, int centerY, float radius, Color color);                          // Draw circle outline
    RLAPI void DrawRectangle(int posX, int posY, int width, int height, Color color);                         // Draw a color-filled rectangle
    RLAPI void DrawRectangleV(Vector2 position, Vector2 size, Color color);                                   // Draw a color-filled rectangle (Vector version)
    RLAPI void DrawRectangleRec(Rectangle rec, Color color);                                                  // Draw a color-filled rectangle
    RLAPI void DrawRectanglePro(Rectangle rec, Vector2 origin, float rotation, Color color);                  // Draw a color-filled rectangle with pro parameters
    RLAPI void DrawRectangleGradientV(int posX, int posY, int width, int height, Color color1, Color color2); // Draw a vertical-gradient-filled rectangle
    RLAPI void DrawRectangleGradientH(int posX, int posY, int width, int height, Color color1, Color color2); // Draw a horizontal-gradient-filled rectangle
    RLAPI void DrawRectangleGradientEx(Rectangle rec, Color col1, Color col2, Color col3, Color col4);        // Draw a gradient-filled rectangle with custom vertex colors
    RLAPI void DrawRectangleLines(int posX, int posY, int width, int height, Color color);                    // Draw rectangle outline
    RLAPI void DrawRectangleLinesEx(Rectangle rec, int lineThick, Color color);                               // Draw rectangle outline with extended parameters
    RLAPI void DrawTriangle(Vector2 v1, Vector2 v2, Vector2 v3, Color color);                                 // Draw a color-filled triangle
    RLAPI void DrawTriangleLines(Vector2 v1, Vector2 v2, Vector2 v3, Color color);                            // Draw triangle outline
    RLAPI void DrawPoly(Vector2 center, int sides, float radius, float rotation, Color color);                // Draw a regular polygon (Vector version)
    RLAPI void DrawPolyEx(Vector2 *points, int numPoints, Color color);                                       // Draw a closed polygon defined by points
    RLAPI void DrawPolyExLines(Vector2 *points, int numPoints, Color color);                                  // Draw polygon lines