raylib-sys/bindings_web.rs

extern "C" {
    #[link_name = "GetFileName"]
    pub fn GetFileName(filePath: *const ::std::os::raw::c_char) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[link_name = "GetFileNameWithoutExt"]
    pub fn GetFileNameWithoutExt(
        filePath: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[link_name = "GetDirectoryPath"]
    pub fn GetDirectoryPath(
        fileName: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[link_name = "GetWorkingDirectory"]
    pub fn GetWorkingDirectory() -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[link_name = "GetDirectoryFiles"]
    pub fn GetDirectoryFiles(
        dirPath: *const ::std::os::raw::c_char,
        count: *mut ::std::os::raw::c_int,
    ) -> *mut *mut ::std::os::raw::c_char;
}
extern "C" {
    #[link_name = "ClearDirectoryFiles"]
    pub fn ClearDirectoryFiles();
}
extern "C" {
    #[link_name = "ChangeDirectory"]
    pub fn ChangeDirectory(dir: *const ::std::os::raw::c_char) -> bool;
}
extern "C" {
    #[link_name = "IsFileDropped"]
    pub fn IsFileDropped() -> bool;
}
extern "C" {
    #[link_name = "GetDroppedFiles"]
    pub fn GetDroppedFiles(count: *mut ::std::os::raw::c_int) -> *mut *mut ::std::os::raw::c_char;
}
extern "C" {
    #[link_name = "ClearDroppedFiles"]
    pub fn ClearDroppedFiles();
}
extern "C" {
    #[link_name = "GetFileModTime"]
    pub fn GetFileModTime(fileName: *const ::std::os::raw::c_char) -> ::std::os::raw::c_long;
}
extern "C" {
    #[link_name = "StorageSaveValue"]
    pub fn StorageSaveValue(position: ::std::os::raw::c_int, value: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "StorageLoadValue"]
    pub fn StorageLoadValue(position: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "OpenURL"]
    pub fn OpenURL(url: *const ::std::os::raw::c_char);
}
extern "C" {
    #[link_name = "IsKeyPressed"]
    pub fn IsKeyPressed(key: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    #[link_name = "IsKeyDown"]
    pub fn IsKeyDown(key: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    #[link_name = "IsKeyReleased"]
    pub fn IsKeyReleased(key: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    #[link_name = "IsKeyUp"]
    pub fn IsKeyUp(key: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    #[link_name = "GetKeyPressed"]
    pub fn GetKeyPressed() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "SetExitKey"]
    pub fn SetExitKey(key: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "IsGamepadAvailable"]
    pub fn IsGamepadAvailable(gamepad: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    #[link_name = "IsGamepadName"]
    pub fn IsGamepadName(
        gamepad: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    #[link_name = "GetGamepadName"]
    pub fn GetGamepadName(gamepad: ::std::os::raw::c_int) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[link_name = "IsGamepadButtonPressed"]
    pub fn IsGamepadButtonPressed(
        gamepad: ::std::os::raw::c_int,
        button: ::std::os::raw::c_int,
    ) -> bool;
}
extern "C" {
    #[link_name = "IsGamepadButtonDown"]
    pub fn IsGamepadButtonDown(
        gamepad: ::std::os::raw::c_int,
        button: ::std::os::raw::c_int,
    ) -> bool;
}
extern "C" {
    #[link_name = "IsGamepadButtonReleased"]
    pub fn IsGamepadButtonReleased(
        gamepad: ::std::os::raw::c_int,
        button: ::std::os::raw::c_int,
    ) -> bool;
}
extern "C" {
    #[link_name = "IsGamepadButtonUp"]
    pub fn IsGamepadButtonUp(gamepad: ::std::os::raw::c_int, button: ::std::os::raw::c_int)
        -> bool;
}
extern "C" {
    #[link_name = "GetGamepadButtonPressed"]
    pub fn GetGamepadButtonPressed() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "GetGamepadAxisCount"]
    pub fn GetGamepadAxisCount(gamepad: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "GetGamepadAxisMovement"]
    pub fn GetGamepadAxisMovement(
        gamepad: ::std::os::raw::c_int,
        axis: ::std::os::raw::c_int,
    ) -> f32;
}
extern "C" {
    #[link_name = "IsMouseButtonPressed"]
    pub fn IsMouseButtonPressed(button: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    #[link_name = "IsMouseButtonDown"]
    pub fn IsMouseButtonDown(button: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    #[link_name = "IsMouseButtonReleased"]
    pub fn IsMouseButtonReleased(button: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    #[link_name = "IsMouseButtonUp"]
    pub fn IsMouseButtonUp(button: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    #[link_name = "GetMouseX"]
    pub fn GetMouseX() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "GetMouseY"]
    pub fn GetMouseY() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "GetMousePosition"]
    pub fn GetMousePosition() -> Vector2;
}
extern "C" {
    #[link_name = "SetMousePosition"]
    pub fn SetMousePosition(x: ::std::os::raw::c_int, y: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "SetMouseOffset"]
    pub fn SetMouseOffset(offsetX: ::std::os::raw::c_int, offsetY: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "SetMouseScale"]
    pub fn SetMouseScale(scaleX: f32, scaleY: f32);
}
extern "C" {
    #[link_name = "GetMouseWheelMove"]
    pub fn GetMouseWheelMove() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "GetTouchX"]
    pub fn GetTouchX() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "GetTouchY"]
    pub fn GetTouchY() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "GetTouchPosition"]
    pub fn GetTouchPosition(index: ::std::os::raw::c_int) -> Vector2;
}
extern "C" {
    #[link_name = "SetGesturesEnabled"]
    pub fn SetGesturesEnabled(gestureFlags: ::std::os::raw::c_uint);
}
extern "C" {
    #[link_name = "IsGestureDetected"]
    pub fn IsGestureDetected(gesture: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    #[link_name = "GetGestureDetected"]
    pub fn GetGestureDetected() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "GetTouchPointsCount"]
    pub fn GetTouchPointsCount() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "GetGestureHoldDuration"]
    pub fn GetGestureHoldDuration() -> f32;
}
extern "C" {
    #[link_name = "GetGestureDragVector"]
    pub fn GetGestureDragVector() -> Vector2;
}
extern "C" {
    #[link_name = "GetGestureDragAngle"]
    pub fn GetGestureDragAngle() -> f32;
}
extern "C" {
    #[link_name = "GetGesturePinchVector"]
    pub fn GetGesturePinchVector() -> Vector2;
}
extern "C" {
    #[link_name = "GetGesturePinchAngle"]
    pub fn GetGesturePinchAngle() -> f32;
}
extern "C" {
    #[link_name = "SetCameraMode"]
    pub fn SetCameraMode(camera: Camera3D, mode: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "UpdateCamera"]
    pub fn UpdateCamera(camera: *mut Camera3D);
}
extern "C" {
    #[link_name = "SetCameraPanControl"]
    pub fn SetCameraPanControl(panKey: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "SetCameraAltControl"]
    pub fn SetCameraAltControl(altKey: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "SetCameraSmoothZoomControl"]
    pub fn SetCameraSmoothZoomControl(szKey: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "SetCameraMoveControls"]
    pub fn SetCameraMoveControls(
        frontKey: ::std::os::raw::c_int,
        backKey: ::std::os::raw::c_int,
        rightKey: ::std::os::raw::c_int,
        leftKey: ::std::os::raw::c_int,
        upKey: ::std::os::raw::c_int,
        downKey: ::std::os::raw::c_int,
    );
}
extern "C" {
    #[link_name = "DrawPixel"]
    pub fn DrawPixel(posX: ::std::os::raw::c_int, posY: ::std::os::raw::c_int, color: Color);
}
extern "C" {
    #[link_name = "DrawPixelV"]
    pub fn DrawPixelV(position: Vector2, color: Color);
}
extern "C" {
    #[link_name = "DrawLine"]
    pub fn DrawLine(
        startPosX: ::std::os::raw::c_int,
        startPosY: ::std::os::raw::c_int,
        endPosX: ::std::os::raw::c_int,
        endPosY: ::std::os::raw::c_int,
        color: Color,
    );
}
extern "C" {
    #[link_name = "DrawLineV"]
    pub fn DrawLineV(startPos: Vector2, endPos: Vector2, color: Color);
}
extern "C" {
    #[link_name = "DrawLineEx"]
    pub fn DrawLineEx(startPos: Vector2, endPos: Vector2, thick: f32, color: Color);
}
extern "C" {
    #[link_name = "DrawLineBezier"]
    pub fn DrawLineBezier(startPos: Vector2, endPos: Vector2, thick: f32, color: Color);
}
extern "C" {
    #[link_name = "DrawCircle"]
    pub fn DrawCircle(
        centerX: ::std::os::raw::c_int,
        centerY: ::std::os::raw::c_int,
        radius: f32,
        color: Color,
    );
}
extern "C" {
    #[link_name = "DrawCircleGradient"]
    pub fn DrawCircleGradient(
        centerX: ::std::os::raw::c_int,
        centerY: ::std::os::raw::c_int,
        radius: f32,
        color1: Color,
        color2: Color,
    );
}
extern "C" {
    #[link_name = "DrawCircleV"]
    pub fn DrawCircleV(center: Vector2, radius: f32, color: Color);
}
extern "C" {
    #[link_name = "DrawCircleLines"]
    pub fn DrawCircleLines(
        centerX: ::std::os::raw::c_int,
        centerY: ::std::os::raw::c_int,
        radius: f32,
        color: Color,
    );
}
extern "C" {
    #[link_name = "DrawRectangle"]
    pub fn DrawRectangle(
        posX: ::std::os::raw::c_int,
        posY: ::std::os::raw::c_int,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        color: Color,
    );
}
extern "C" {
    #[link_name = "DrawRectangleV"]
    pub fn DrawRectangleV(position: Vector2, size: Vector2, color: Color);
}
extern "C" {
    #[link_name = "DrawRectangleRec"]
    pub fn DrawRectangleRec(rec: Rectangle, color: Color);
}
extern "C" {
    #[link_name = "DrawRectanglePro"]
    pub fn DrawRectanglePro(rec: Rectangle, origin: Vector2, rotation: f32, color: Color);
}
extern "C" {
    #[link_name = "DrawRectangleGradientV"]
    pub fn DrawRectangleGradientV(
        posX: ::std::os::raw::c_int,
        posY: ::std::os::raw::c_int,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        color1: Color,
        color2: Color,
    );
}
extern "C" {
    #[link_name = "DrawRectangleGradientH"]
    pub fn DrawRectangleGradientH(
        posX: ::std::os::raw::c_int,
        posY: ::std::os::raw::c_int,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        color1: Color,
        color2: Color,
    );
}
extern "C" {
    #[link_name = "DrawRectangleGradientEx"]
    pub fn DrawRectangleGradientEx(
        rec: Rectangle,
        col1: Color,
        col2: Color,
        col3: Color,
        col4: Color,
    );
}
extern "C" {
    #[link_name = "DrawRectangleLines"]
    pub fn DrawRectangleLines(
        posX: ::std::os::raw::c_int,
        posY: ::std::os::raw::c_int,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        color: Color,
    );
}
extern "C" {
    #[link_name = "DrawRectangleLinesEx"]
    pub fn DrawRectangleLinesEx(rec: Rectangle, lineThick: ::std::os::raw::c_int, color: Color);
}
extern "C" {
    #[link_name = "DrawTriangle"]
    pub fn DrawTriangle(v1: Vector2, v2: Vector2, v3: Vector2, color: Color);
}
extern "C" {
    #[link_name = "DrawTriangleLines"]
    pub fn DrawTriangleLines(v1: Vector2, v2: Vector2, v3: Vector2, color: Color);
}
extern "C" {
    #[link_name = "DrawPoly"]
    pub fn DrawPoly(
        center: Vector2,
        sides: ::std::os::raw::c_int,
        radius: f32,
        rotation: f32,
        color: Color,
    );
}
extern "C" {
    #[link_name = "DrawPolyEx"]
    pub fn DrawPolyEx(points: *mut Vector2, numPoints: ::std::os::raw::c_int, color: Color);
}
extern "C" {
    #[link_name = "DrawPolyExLines"]
    pub fn DrawPolyExLines(points: *mut Vector2, numPoints: ::std::os::raw::c_int, color: Color);
}
